<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.foodyapplication.ui.auth.login.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.login.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="Email/Tên đăng nhập">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_account"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{loginViewModel::onEmailChanged}"
                    android:text="@={loginViewModel.currentUser.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_can_be_not_empty"
                android:textColor="@color/Red"
                android:textSize="12sp"
                android:visibility="@{loginViewModel.currentUser.validateEmail ? View.GONE : View.VISIBLE}" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mật khẩu">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:onTextChanged="@{loginViewModel::onPasswordChanged}"
                        android:text="@={loginViewModel.currentUser.password}" />

                </com.google.android.material.textfield.TextInputLayout>


                <ImageView
                    android:id="@+id/ivTogglePassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="50dp"
                    android:contentDescription="Hiện/ẩn mật khẩu"
                    android:src="@drawable/ic_eye" />


                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="Quên?"
                    android:textColor="@color/Blue"
                    android:textSize="14sp" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Password can be not empty"
                android:textColor="@color/Red"
                android:textSize="12sp"
                android:visibility="@{loginViewModel.currentUser.validatePassword ? View.GONE : View.VISIBLE}" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="@{loginViewModel.currentUser.validateDataLogin ? 1.0f : 0.8f}"
                android:background="@drawable/bg_login_rounded"
                android:enabled="@{loginViewModel.currentUser.validateDataLogin}"
                android:onClick="@{() -> loginViewModel.loginAction()}"
                android:text='@{loginViewModel.currentUser.validateDataLogin ? "Đăng nhập" : "Tiếp tục"}' />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#CCC" />

                <TextView
                    android:id="@+id/tvOr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ho_c" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#CCC" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_ripple_shopee"
                android:drawableStart="@drawable/ic_google"
                android:padding="15dp"
                android:text="@string/ti_p_t_c_v_i_google" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ripple_shopee"
                android:drawableStart="@drawable/ic_facebook"
                android:padding="15dp"
                android:text="@string/ti_p_t_c_v_i_facebook" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="Bằng cách đăng nhập hoặc đăng ký, bạn đồng ý với Chính sách quy định của Foody."
                android:textSize="12sp" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>